# SnapValue

./: README.md  embeddings.ipynb
price-predictor/: .gitignore  download_images.py  ebay_items_2023_present.csv  ebay_scapper.py  eda.ipynb  embeddings.ipynb  main.py  pyproject.toml  requirements.txt
price-predictor/src/price_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
